--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -82,3 +82,17 @@ a{
     font-size: 18px;
     cursor: pointer;
 }
+
+/*Footer*/
+#sponsor-line, #info-line, #social-media-line {
+    display: flex;
+}
+#info-line {
+    background-color: #F5F5F5;
+    border-bottom: solid;
+    border-top: solid;
+}
+#info-line p{
+    flex: 1;
+    margin: 20px 0 20px 0;
+}
