--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -66,6 +66,37 @@ a{
 
 
 
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+
+
+
 /*BreadCrumbs*/
 #breadcrumbs {
     display: flex;
@@ -91,6 +122,7 @@ a{
     background-color: #F5F5F5;
     border-bottom: solid;
     border-top: solid;
+    border-width: 1px;
 }
 #info-line p{
     flex: 1;
