--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -64,31 +64,32 @@ a{
     text-align: center;
 }
 
-
-
-
-li.dropdown {
+/*dropdown*/
+li .dropdown {
     display: inline-block;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #fff;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+    color: #327AB6;
+    padding: 12px 25px 12px 30px;
     text-decoration: none;
     display: block;
     text-align: left;
+    font-size: 26px;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+    background-color: #f5f5f5;
+}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -117,6 +118,7 @@ li.dropdown {
 /*Footer*/
 #sponsor-line, #info-line, #social-media-line {
     display: flex;
+    flex-wrap: wrap;
 }
 #info-line {
     background-color: #F5F5F5;
