--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -25,9 +25,6 @@ a{
 }
 
 
-
-
-
 /*Navigation*/
 .navUl {
     display: flex;
@@ -95,9 +92,6 @@ li .dropdown {
     display: block;
 }
 
-
-
-
 /*BreadCrumbs*/
 #breadcrumbs {
     display: flex;
@@ -114,6 +108,21 @@ li .dropdown {
     font-size: 18px;
     cursor: pointer;
 }
+
+
+
+#bottomcontainer {
+    background-color: #339933;
+    display: flex;
+}
+#bottomcontainer div {
+    flex: 1;
+    margin: 8%;
+    color: #fff;
+}
+
+
+
 
 /*Footer*/
 #sponsor-line, #info-line, #social-media-line {
