--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -117,18 +117,31 @@ li .dropdown {
 
 
 
+
+
+/*School*/
+.school-gallary {
+}
+.school-img {
+}
+.school-img img {
+    max-width: 46%;
+    margin: 2%;
+}
+
+
 #bottomcontainer {
     background-color: #339933;
     display: flex;
 }
-#bottomcontainer div {
+.school {
     flex: 1;
     margin: 8%;
     color: #fff;
 }
 #bottomcontainer p {
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 40px;
+    margin-bottom: 25px;
 }
 #bottomcontainer a {
     background-color: #75BE5F;
@@ -143,10 +156,20 @@ li .dropdown {
 
 
 /*Footer*/
+
 #sponsor-line, #info-line, #social-media-line {
     display: flex;
     flex-wrap: wrap;
 }
+
+#sponsor-line {
+    justify-content: center;
+}
+#sponsor-line img {
+    margin: 10px 50px;
+}
+
+
 #info-line {
     background-color: #F5F5F5;
     border-bottom: solid;
