--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -154,6 +154,44 @@ li .dropdown {
     font-size: 16px;
 }
 
+/*360 Video*/
+#videocontainer {
+  background-color: #666666;
+  display: flex;
+}
+
+.video-box {
+    flex: 1;
+}
+/*needs revision*/
+.video {
+  height: 70%;
+  margin-bottom: 24.4%;
+  margin-left: 25%;
+  margin-top: 5.6%;
+  width: 50%;
+}
+
+/*Newsletter*/
+#mailcontainer {
+  background-color: #327AB6;
+  display: flex;
+}
+.mail-box {
+  flex: 1;
+}
+.mail-box-background {
+  width: 100%
+}
+
+
+/*Budget*/
+
+
+
+/*Prices*/
+
+
 
 /*Calendar*/
 #Calendar {
