--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -184,7 +184,28 @@ li .dropdown {
   width: 100%
 }
 
+.newsletter-header {
+  color: #ffffff;
+  padding-left: 8%;
+}
 
+.email-input {
+  border-style: none;
+  margin-left: 8%;
+  margin-top: 5%;
+  width: 35%;
+  height: 50px;
+}
+
+#subscribe-button {
+  border-style: none;
+  margin-left: 2.7%;
+  margin-top: 5%;
+  width: 5%;
+  height: 50px;
+  color: #000000;
+  background-color: #ffffff;
+}
 /*Budget*/
 
 
