there has to be an easier way to do this

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -258,6 +258,10 @@ li .dropdown {
   width: 34%;
 }
 
+#pricebox-prices h2 {
+  color: #327AB6;
+}
+
 #pricebox-deals {
   margin-left: 16%;
   text-align: right;
