--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -262,10 +262,12 @@ li .dropdown {
   color: #327AB6;
 }
 
-#pricebox-deals {
+#pricebox-deals-left {
   margin-left: 16%;
-  text-align: right;
-  width: 34%;
+  width: 26%;
+}
+#pricebox-deals-right {
+  margin-right: 8%;
 }
 
 /*Calendar*/
