--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -116,8 +116,38 @@ li .dropdown {
 }
 
 
+/*Slider*/
 
+#slides{
+  position: relative;
+  height: 628px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
 
+.sliderli{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  left: 0px;
+  top: 0px;
+  opacity: 0;
+  -webkit-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  transition: opacity 1s;
+}
+
+.visable{
+  opacity: 1;
+  z-index: 2;
+}
+
+#slides{
+  
+}
 
 /*School*/
 .school-gallary {
