--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -202,7 +202,6 @@ Went with image solution (#topbar img) due to time presure
 /*index main section*/
 #toptiles{
   background-color: #327AB6;
-  height: 1000px;
   margin-top: -40px;
   z-index: 1;
 }
@@ -231,7 +230,7 @@ Went with image solution (#topbar img) due to time presure
 
 #righttoptile img{
    width: 140px;
-   margin-left: 70%;
+   margin-left: 80%;
    margin-top: -150px;
 }
 
@@ -241,7 +240,7 @@ Went with image solution (#topbar img) due to time presure
   width: 300px;
   height: 55px;
   margin-left: 69%;
-  margin-top: 100px;
+  margin-top: 68px;
   font-size: 25px;
   border: none;
 }
@@ -250,11 +249,71 @@ Went with image solution (#topbar img) due to time presure
   width: 800px;
 }
 
+#lefttoptile{
+  color: white;
+}
+
 #lefttoptile img{
   width: 700px;
   position: absolute;
-  margin-top: 80px;
+  margin-top: 54px;
   margin-left: 50px;
+}
+
+#lefttoptile p, #lefttoptile button{
+  position: absolute;
+}
+
+#lefttoptile p{
+  width: 800px;
+  font-size: 25px;
+  top: 1520px;
+  left: 70px;
+}
+
+#lefttoptile button{
+  background-color: #81A2E3;
+  color: white;
+  width: 300px;
+  height: 55px;
+  left: 70px;
+  top: 1700px;
+  font-size: 25px;
+  border: none;
+}
+
+#middlecontainer{
+  padding-top: 100px;
+  background-color: #327AB6;
+  display: flex;
+  height: 670px;
+}
+
+#midh1{
+text-align: center;
+color: white;
+background-color: #327AB6;
+padding-top: 30px;
+}
+
+#middlecontainer img{
+  width: 300px;
+}
+
+#middlecontainer p{
+  text-align: center;
+  margin-left: 25%;
+  width: 270px;
+  color: white;
+  padding-bottom: 50px;
+}
+
+.thirtythree{
+  width: 33%;
+}
+
+.thirtythree img{
+  margin-left: 25%;
 }
 
 /*School*/
