--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -508,6 +508,23 @@ padding-top: 30px;
   margin-top: 100px;
   padding-bottom: 0px;
 }
+
+.tileimgbig{
+   width: 45vw;
+}
+
+.tileimgsmall1{
+
+}
+
+.tileimgsmall2{
+
+}
+
+.tileimgsmall3{
+   width: 12vw;
+}
+
 .facilities_block2 {
   margin-left: 138px;
   margin-top: 100px;
@@ -551,9 +568,8 @@ padding-top: 30px;
   justify-content: space-between;
 }
 .three {
-  margin-left: 428px;
-  margin-top: -150px;
-  position: absolute;
+  margin-left: 85%;
+  margin-top: -140px;
 }
 .nature_circle {
   margin-left: 520px;
