--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -640,6 +640,8 @@ padding-top: 30px;
 
 .tileimgbig{
    width: 45vw;
+   height: 520px;
+   margin-top: -45px;
 }
 
 .tileimgsmall1{
@@ -651,7 +653,7 @@ padding-top: 30px;
 }
 
 .tileimgsmall3{
-   width: 12vw;
+   width: 11vw;
 }
 
 .facilities_block2 {
@@ -675,6 +677,10 @@ padding-top: 30px;
   position: absolute;
 }
 
+.e-sport_circle img, .nature_circle img{
+  margin-left: 38%;
+}
+
 /*Facilities tile*/
 .facilities {
   display: flex;
@@ -693,6 +699,7 @@ padding-top: 30px;
 
 /*Cabins and Nature tile*/
 .nature {
+  overflow: hidden;
   display: flex;
   justify-content: space-between;
 }
