--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -157,9 +157,10 @@ li .dropdown {
   z-index: 2;
 }
 
-#slides{
-
-}
+  .sliderimage{
+    height: 628px;
+    width: 100%;
+  }
 
 #slidercontrolscontainer{
   height: 40px;
@@ -208,12 +209,13 @@ li .dropdown {
   height: 470px;
   width: 470px;
   z-index: 5;
+  position: relative;
 }
 
 #topbar{
   border-bottom: solid #327AB6 17px;
   max-height: 270px;
-  padding-left: 8%;
+  padding-left: 7%;
   padding-right: 8%;
 }
 
@@ -719,8 +721,12 @@ padding-top: 30px;
   position: absolute;
 }
 
-.e-sport_circle img, .nature_circle img{
+.e-sport_circle img{
   margin-left: 50%;
+}
+
+.nature_circle img{
+  margin-left: 20%;
 }
 
 /*Facilities tile*/
@@ -1065,7 +1071,7 @@ padding-top: 30px;
     margin-top: 277px;
     }
     #deluxh1{
-      margin-top: 50px;
+      margin-top: 90px;
       left: 85.9%;
     }
     .e-sport_circle img{
