--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -90,7 +90,7 @@ li .dropdown {
     background-color: #fff;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 5;
 }
 
 .dropdown-content a {
@@ -158,8 +158,9 @@ li .dropdown {
 }
 
   .sliderimage{
-    height: 628px;
+    min-height: 628px;
     width: 100%;
+    overflow: hidden;
   }
 
 #slidercontrolscontainer{
