media query change

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1073,11 +1073,14 @@ padding-top: 30px;
     margin-top: 277px;
     }
     #deluxh1{
-      margin-top: 90px;
+      margin-top: 54px;
       left: 85.9%;
     }
     .e-sport_circle img{
       margin-left: 18%;
+    }
+    .nature_circle img{
+      margin-left: 7%;
     }
 }
 
